--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "cors": "^2.7.1",
     "express": "^4.14.0",
     "morgan": "^1.7.0",
-    "sendgrid": "^3.0.7"
+    "mysql": "^2.11.1",
+    "sendgrid": "^3.0.7",
+    "sequelize": "^3.23.4"
   }
 }
