--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "express": "^4.14.0",
     "morgan": "^1.7.0",
     "mysql": "^2.11.1",
+    "node-uuid": "^1.4.7",
     "sendgrid": "^3.0.7",
     "sequelize": "^3.23.4"
   }
