--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "mysql": "^2.11.1",
     "node-uuid": "^1.4.7",
     "sendgrid": "^3.0.7",
-    "sequelize": "^3.23.4"
+    "sequelize": "^3.23.4",
+    "textbelt": "0.0.3"
   }
 }
