--- a/package.json
+++ b/package.json
@@ -30,9 +30,12 @@
   "author": "Sompop Suksawat (ssuksawat21@gmail.com)",
   "license": "UNLICENSED",
   "dependencies": {
+    "angular": "^1.5.7",
+    "angular-ui-router": "^0.3.1",
     "body-parser": "^1.15.2",
     "cors": "^2.7.1",
     "express": "^4.14.0",
+    "jsonwebtoken": "^7.1.3",
     "moment": "^2.14.1",
     "morgan": "^1.7.0",
     "mysql": "^2.11.1",
@@ -40,5 +43,47 @@
     "sendgrid": "^3.0.7",
     "sequelize": "^3.23.4",
     "textbelt": "0.0.3"
+  },
+  "devDependencies": {
+    "babel-preset-es2015": "^6.5.0",
+    "babelify": "^7.2.0",
+    "browserify": "^13.0.0",
+    "browserify-ng-html2js": "^1.2.0",
+    "browserify-shim": "^3.8.12",
+    "chai": "^3.5.0",
+    "eslint": "^1.10.3",
+    "mocha": "^2.4.5",
+    "nodemon": "^1.8.1",
+    "pleeease-cli": "^4.0.0",
+    "rimraf": "^2.5.1",
+    "sinon": "^1.17.3",
+    "uglify-js": "^2.6.1",
+    "watchify": "^3.7.0"
+  },
+  "browser": {
+    "jquery": "./node_modules/jquery/dist/jquery.js"
+  },
+  "browserify-shim": {
+    "jquery": "$",
+    "angular": {
+      "exports": "angular",
+      "depends": [
+        "jquery"
+      ]
+    }
+  },
+  "browserify": {
+    "transform": [
+      "browserify-shim",
+      "browserify-ng-html2js",
+      [
+        "babelify",
+        {
+          "presets": [
+            "es2015"
+          ]
+        }
+      ]
+    ]
   }
 }
