--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "bluebird": "^3.4.1",
     "body-parser": "^1.15.2",
     "cors": "^2.7.1",
+    "cutestrap": "^1.3.1",
     "express": "^4.14.0",
     "jsonwebtoken": "^7.1.3",
     "moment": "^2.14.1",
